# my-pdf-reader

./: index.html
.github/workflows/: build.yml
lib/fonts/: fonts.css
src-tauri/: Cargo.toml  tauri.conf.json
